--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 LinkingTo: Rcpp, RcppArmadillo
-Imports: Rcpp
+Imports: Rcpp,
+         stats
 Suggests: knitr,
     rmarkdown,
     testthat
