--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,8 @@ Title: Boltzmann Machines with MM Algorithms
 Version: 0.1.0
 Author: Andrew Thomas Jones, Hien Duy Ngyuen
 Maintainer: Andrew Thomas Jones <andrewthomasjones@gmail.com>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: Estimates a fully-visible Boltzmann machine via
+    maximum pseudolikelihood estimation using an MM algorithm.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
