--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,4 +14,7 @@ LazyData: true
 LinkingTo: Rcpp, RcppArmadillo, BH
 Imports: Rcpp
 RoxygenNote: 6.0.1
-Suggests: testthat
+Suggests: testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
