New documentation and updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(fvbmHess)
 export(fvbmcov)
 export(fvbmpartiald)
 export(fvbmstderr)
+export(fvbmtests)
+export(marginpfvbm)
 export(pfvbm)
 export(rfvbm)
 importFrom(Rcpp,sourceCpp)
