--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,5 +16,6 @@ Imports: Rcpp
 RoxygenNote: 6.0.1
 Suggests: testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    bnstruct
 VignetteBuilder: knitr
