--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Encoding: UTF-8
 LazyData: true
 LinkingTo: Rcpp, RcppArmadillo, BH
 Imports: Rcpp
+Depends: R (>= 2.10)
 RoxygenNote: 6.0.1
 Suggests: testthat,
     knitr,
