--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: BoltzMM
 Type: Package
 Title: Boltzmann Machines with MM Algorithms
 Version: 0.1.3
-Author: Andrew Thomas Jones, Hien Duy Ngyuen
+Author: Andrew Thomas Jones, Hien Duy Nguyen, and Jessica Juanita Bagnall 
 Maintainer: Andrew Thomas Jones <andrewthomasjones@gmail.com>
 Description: Provides probability computation, data generation,
     and model estimation for fully-visible Boltzmann machines. It follows the methods
